fix: Component item relative to contain absolutely positioned items

--- a/special-pages/pages/new-tab/app/components/Components.module.css
+++ b/special-pages/pages/new-tab/app/components/Components.module.css
@@ -72,7 +72,6 @@ body[data-display="components"] {
     gap: 1rem; /* Adjust the gap size as needed */
 }
 
-.selectItem {
+.item {
+    position: relative;
 }
-
-.item {}
