chore: Add a gap var to the ntp-theme css and apply across widgets

--- a/special-pages/pages/new-tab/app/favorites/components/Favorites.module.css
+++ b/special-pages/pages/new-tab/app/favorites/components/Favorites.module.css
@@ -9,7 +9,7 @@
         'showhide';
 
     &.bottomSpace {
-        margin-bottom: var(--sp-8);
+        margin-bottom: var(--ntp-gap);
     }
 
     &:hover {
@@ -26,7 +26,7 @@
 
 .showhide {
     grid-area: showhide;
-    height: 2rem;
+    height: var(--ntp-gap);
     display: grid;
     justify-items: center;
 }
