--- a/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
+++ b/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
@@ -11,7 +11,7 @@
     color: var(--ntp-text-normal);
     width: 100%;
     animation: animate-fade .2s cubic-bezier(0.55, 0.055, 0.666, 0.19);
-    margin-bottom: var(--sp-8);
+    margin-bottom: var(--ntp-gap);
 
 
     &.icon {
