--- a/special-pages/pages/new-tab/app/components/ShowHide.module.css
+++ b/special-pages/pages/new-tab/app/components/ShowHide.module.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     color: var(--ntp-text-normal);
-    height: 2rem;
+    height: var(--ntp-gap);
     width: 100%;
     border-radius: var(--border-radius-md);
 
