--- a/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
+++ b/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
@@ -8,7 +8,7 @@
     grid-template-columns: auto;
     grid-row-gap: calc(18 * var(--px-in-rem));
     width: 100%;
-    margin-bottom: 2rem;
+    margin-bottom: var(--ntp-gap);
 
     @media screen and (prefers-color-scheme: dark) {
         border-color: var(--color-white-at-9);
