New Tab Page and NTP Widget styles (#1229)
* fix: NextSteps bubble position, rm the unused mock provider

* chore: Add RMF to default page, adjust NextSteps styels

* chore: Add common border radii 4, 6, 8, 12px

* fix: tests, first attempt

* reverting adding the RMF to the default page

* feat: Add hover show/hide on NExtSteps

* chore: Add focus ring consistency

* chore: Update text colors to use ntp theme values

* chore: remove unneeded css

* wip

* fix: file names

* fix: bubble location

* fix: addAppToDockMac NextSteps variant

* chore: Add 0 gap option to Stack, use in WidgetList

* chore: remove ShowHideButtonWithText, update ShowHideButton to handle full width and round variations

* chore: Update ChevronButton Icon

* chore: Add long title option to the Favorites data

* chore: Adjust widget spacing values

* chore: A few cleanups

* chore: Reorg RMF

* chore: Reorg PrivacyStats

* fix: PrivacyStats reorg

* chore: Reorg Customizer

* chore: Update Examples

* fix: Favorites tests

* chore: Add type info to the Examples in each widget

* fix: Examples view

* fix: Component item relative to contain absolutely positioned items

* chore: Rename example files consistently

* chore: UpdateNotification added to correct space, switched to DismissButton usage

* fix: lint

* chore: Remove unneeded color

* chore: Add a gap var to the ntp-theme css and apply across widgets

* rebase bugfix

* chore: Fix rmf spacing

* fix: Favorites test

* fix: thin focus ring

---------

Co-authored-by: Shane Osbourne <sosbourne@duckduckgo.com>

--- a/special-pages/pages/new-tab/app/components/DismissButton.module.css
+++ b/special-pages/pages/new-tab/app/components/DismissButton.module.css
@@ -2,18 +2,15 @@
     border-width: 0;
     text-wrap: nowrap;
     font-weight: 600;
-    font-size: calc(11 * var(--px-in-rem));
-    line-height: calc(11 * var(--px-in-rem));
-    color: var(--ntp-color-primary);
     height: 1rem;
     width: 1rem;
     padding: 0;
     line-height: 1;
     background-color: transparent;
-    color: var(--color-black-at-60);
+    color: var(--ntp-text-muted);
     border: none;
     border-radius: 50%;
-
+    transition: all .3s;
 
     &:hover {
         background-color: var(--color-black-at-9);
@@ -22,7 +19,7 @@
 
     &:active {
         background-color: var(--color-black-at-18);
-        color: var(--color-black-at-84);
+        color: var(--ntp-text-normal);
     }
 
     &:disabled {
@@ -35,20 +32,17 @@
     }
 
     &:focus-visible {
-        box-shadow: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--ntp-focus-outline-color);
+        box-shadow: var(--focus-ring);
+        outline: none;
     }
 
     @media screen and (prefers-color-scheme: dark) {
-        color: var(--color-white-at-60);
-
-
         &:hover {
             background-color: var(--color-black-at-9);
         }
 
         &:active {
             background-color: var(--color-white-at-18);
-            color: var(--color-white-at-84);
         }
 
         &:disabled {
@@ -60,42 +54,5 @@
             cursor: not-allowed;
             background-color: var(--color-white-at-12);
         }
-
-        &:focus-visible {
-            box-shadow: 0px 0px 0px 1px var(--ntp-focus-outline-color), 0px 0px 0px 3px var(--color-white);
-        }
     }
 }
-/* 
-.dismissBtn {
-    height: 1rem;
-    width: 1rem;
-    padding: 0;
-    line-height: 1;
-    background-color: transparent;
-    color: var(--color-black-at-60);
-    border: none;
-    border-radius: 50%;
-
-    &:active {
-        background-color: var(--color-black-at-18);
-        color: var(--color-black-at-84);
-    }
-
-    &:hover {
-        background-color: var(--color-black-at-9);
-    }
-
-    @media screen and (prefers-color-scheme: dark) {
-        color: var(--color-white-at-60);
-
-        &:hover {
-            background-color: var(--color-white-at-9);
-        }
-
-        &:active {
-            background-color: var(--color-white-at-18);
-            color: var(--color-white-at-84);
-        }
-    }
-} */
