--- a/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
+++ b/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
@@ -1,16 +1,16 @@
 .item {
     display: grid;
-    grid-row-gap: 6px;
+    grid-row-gap: calc(6 * var(--px-in-rem));
     align-content: center;
     justify-content: center;
     position: relative;
     text-decoration: none;
     color: currentColor;
-    padding-inline: 12px;
+    padding-inline: var(--sp-3);
     outline: none;
 
     &:focus-visible .icon {
-        outline: 1px dotted var(--ntp-focus-outline-color);
+        box-shadow: var(--focus-ring);
     }
 }
 
@@ -18,9 +18,9 @@
     display: grid;
     align-content: center;
     justify-content: center;
-    width: 64px;
-    height: 64px;
-    border-radius: 12px;
+    width: 4rem;
+    height: 4rem;
+    border-radius: var(--border-radius-lg);
 }
 
 .draggable {
@@ -35,7 +35,7 @@
     }
 
     @media screen and (prefers-color-scheme: dark) {
-        background-color: var(--color-white-at-9);
+        background-color: var(--color-white-at-6);
         &:hover {
             background-color: var(--color-white-at-12);
         }
@@ -44,9 +44,9 @@
 
 .favicon {
     display: block;
-    width: 32px;
-    height: 32px;
-    border-radius: 8px;
+    width: 2rem;
+    height: 2rem;
+    border-radius: var(--border-radius-md);
     background-repeat: no-repeat;
     background-size: contain;
     pointer-events: none;
@@ -58,30 +58,22 @@
     }
 
     &[data-loaded][data-did-try-fallback] {
-        border-radius: 8px;
-    }
-
-    &[data-errored] {
-
+        border-radius: var(--border-radius-md);
     }
 }
 
 .text {
     text-align: center;
-    font-size: 10px;
-    line-height: 13px;
+    font-size: calc(10 * var(--px-in-rem));
+    line-height: calc(13 * var(--px-in-rem));
     font-weight: 400;
     min-height: 2.8em;
     overflow: hidden;
     text-overflow: ellipsis;
+    line-clamp: 2;
     -webkit-line-clamp: 2;
     display: -webkit-box;
     -webkit-box-orient: vertical;
-}
-.preview {
-    padding: .5em;
-    border-radius: 5px;
-    background: white;
 }
 
 .placeholder {
@@ -115,15 +107,13 @@
     }
 
     &:focus-visible {
-        border-style: dotted;
-        border-color: var(--ntp-focus-outline-color);
-        border-width: 1px;
+        box-shadow: var(--focus-ring);
     }
 }
 
 .dropper {
     width: 2px;
-    height: 64px;
+    height: 4rem;
     position: absolute;
     top: 0;
     background-color: var(--color-black-at-12);
@@ -148,7 +138,4 @@
 
 [data-item-state="dragging"] {
     opacity: 0.4;
-}
-
-[data-item-state="is-dragging-over"] {
 }
