--- a/special-pages/pages/new-tab/app/components/Components.module.css
+++ b/special-pages/pages/new-tab/app/components/Components.module.css
@@ -35,7 +35,7 @@ body[data-display="components"] {
     color: var(--ntp-text-normal);
     padding: 0.2em 0.3em;
     border: 1px solid var(--color-gray-60);
-    border-radius: 4px;
+    border-radius: var(--border-radius-xs);
     display: inline-block;
     line-height: 1;
     text-decoration: none;
@@ -72,7 +72,6 @@ body[data-display="components"] {
     gap: 1rem; /* Adjust the gap size as needed */
 }
 
-.selectItem {
+.item {
+    position: relative;
 }
-
-.item {}
