--- a/special-pages/pages/new-tab/app/components/ShowHide.module.css
+++ b/special-pages/pages/new-tab/app/components/ShowHide.module.css
@@ -9,21 +9,29 @@
     justify-content: center;
     align-items: center;
     color: var(--ntp-text-normal);
-    height: 32px;
-    width: 32px;
-    line-height: 32px;
-    gap: 6px;
-    padding-left: 0;
-    padding-right: 0;
-    font-size: 11px;
-    border-radius: 50%;
+    height: var(--ntp-gap);
+    width: 100%;
+    border-radius: var(--border-radius-md);
+
+    &.round {
+        width: 2rem;
+        border-radius: 50%;
+
+        &:focus-visible {
+            box-shadow: var(--focus-ring);
+        }
+    }
+
+    svg {
+        transition: transform .3s;
+    }
 
     &[aria-pressed=true] svg {
-        transform: rotate(180deg);
+        transform: rotate(-180deg);
     }
 
     &:focus-visible {
         opacity: 1;
-        outline: 1px dotted var(--ntp-focus-outline-color);
+        box-shadow: var(--focus-ring-thin);
     }
 }
