--- a/special-pages/pages/new-tab/app/customizer/components/VisibilityMenu.module.css
+++ b/special-pages/pages/new-tab/app/customizer/components/VisibilityMenu.module.css
@@ -1,7 +1,7 @@
 .dropdownInner {
     background: var(--ntp-surface-background-color);
     padding: var(--sp-1);
-    border-radius: 8px;
+    border-radius: var(--border-radius-md);
     backdrop-filter: blur(48px);
 
     border: 1px solid var(--color-black-at-9);
@@ -28,9 +28,9 @@
     gap: 10px;
     white-space: nowrap;
     font-size: var(--title-3-em-font-size);
-    height: 28px;
-    padding-left: 10px;
-    padding-right: 10px;
+    height: calc(28 * var(--px-in-rem));
+    padding-inline: calc(10 * var(--px-in-rem));
+
     > * {
         min-width: 0;
     }
@@ -38,8 +38,8 @@
 
 .svg {
     flex-shrink: 0;
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
     display: flex;
 }
 
@@ -55,13 +55,13 @@
 
 .checkboxIcon {
     font-size: 0;
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-shrink: 0;
-    border-radius: 4px;
+    border-radius: var(--border-radius-xs);
     border: 1px solid var(--color-black-at-48);
 
     @media screen and (prefers-color-scheme: dark) {
