--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -2,7 +2,7 @@
     background-color: var(--ntp-surface-background-color);
     border: 1px solid var(--ntp-surface-border-color);
     padding: var(--sp-2) var(--sp-4);
-    border-radius: var(--sp-3);
+    border-radius: var(--border-radius-lg);
     position: relative;
     display: flex;
     flex-direction: column;
@@ -19,8 +19,6 @@
     width: 4rem;
     margin-bottom: var(--sp-1);
 }
-
-
 
 .title {
     font-weight: 590;
@@ -43,13 +41,12 @@
     padding: calc(6 * var(--px-in-rem)) var(--sp-3);
     background-color: transparent;
     border-width: 0;
-    border-radius: calc(6 * var(--px-in-rem));
+    border-radius: var(--border-radius-sm);
     text-wrap: nowrap;
     font-weight: 600;
     font-size: calc(11 * var(--px-in-rem));
-    line-height: calc(11 * var(--px-in-rem));
+    line-height: 1;
     color: var(--ntp-color-primary);
-
 
     &:hover {
         background-color: var(--color-black-at-6);
@@ -71,12 +68,11 @@
     }
 
     &:focus-visible {
-        box-shadow: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--ntp-focus-outline-color);
+        box-shadow: var(--focus-ring);
+        outline: none;
     }
 
     @media screen and (prefers-color-scheme: dark) {
-        color: var(--color-blue-40);
-
         &:hover:not(:active) {
             background-color: var(--color-black-at-9);
         }
@@ -90,21 +86,6 @@
             cursor: not-allowed;
             background-color: var(--color-white-at-12);
         }
-
-        &:focus-visible {
-            box-shadow: 0px 0px 0px 1px var(--ntp-focus-outline-color), 0px 0px 0px 3px var(--color-white);
-        }
-    }
-}
-
-&:hover {
-    .showhideVisible [aria-controls] {
-        opacity: 1;
-    }
-}
-&:focus-within {
-    .showhideVisible [aria-controls] {
-        opacity: 1;
     }
 }
 
@@ -117,6 +98,17 @@
 .cardGroup {
     height: 100%;
     width: 100%;
+    position: relative;
+
+    &:hover {
+        .showhide {
+            opacity: 1;
+        }
+    }
+
+    &.bottomSpace {
+        margin-bottom: var(--ntp-gap);
+    }
 }
 
 .cardGrid {
@@ -130,6 +122,9 @@
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    position: absolute;
+    top: calc(-22 * var(--px-in-rem));
+    left: 0;
 
     svg path {
         fill: var(--ntp-color-primary);
@@ -138,8 +133,7 @@
     div {
         background-color: var(--ntp-color-primary);
         font-size: calc(11 * var(--px-in-rem));
-
-        height: 20px;
+        height: calc(20 * var(--px-in-rem));
         line-height: normal;
         font-weight: 600;
         letter-spacing: 0.06px;
@@ -148,41 +142,26 @@
         align-items: center;
         justify-content: center;
     }
+}
 
-    @media screen and (prefers-color-scheme: dark) {
-        svg path {
-            fill: var(--color-blue-40);
+.cardGroup {
+    transition: opacity .2s;
+    &:hover {
+        .showhide [aria-controls] {
+            opacity: 1;
         }
-
-        div {
-            background-color: var(--color-blue-40);
+    }
+    &:focus-within {
+        .showhide [aria-controls] {
+            opacity: 1;
         }
     }
 }
 
-
-.showhide {
-    grid-area: showhide;
-    height: 32px;
-    display: grid;
-    justify-items: center;
-
-
-&:hover {
-    &.showhideVisible [aria-controls] {
-        opacity: 1;
-    }
-}
-&:focus-within {
-    &.showhideVisible [aria-controls] {
-        opacity: 1;
-    }
-}
-}
 :root:has(body[data-platform-name="windows"]) {
     .nextStepsCard .title {
         font-weight: 700;
-        line-height: 20px;
+        line-height: calc(20 * var(--px-in-rem));
         letter-spacing: normal;
     }
 }
