--- a/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
+++ b/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
@@ -1,15 +1,18 @@
 .root {
     --ntp-rmf-surface-background-color: rgba(0, 0, 0, .06);
     background: var(--ntp-rmf-surface-background-color);
-    padding: 14px var(--sp-8) 14px var(--sp-4);
-    border-radius: var(--sp-3);
+    padding: calc(14 * var(--px-in-rem)) var(--sp-8) calc(14 * var(--px-in-rem)) var(--sp-4);
+    border-radius: var(--border-radius-lg);
     position: relative;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     font-family: system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto;
-    color: var(--color-black);
+    color: var(--ntp-text-normal);
     width: 100%;
+    animation: animate-fade .2s cubic-bezier(0.55, 0.055, 0.666, 0.19);
+    margin-bottom: var(--ntp-gap);
+
 
     &.icon {
         padding-left: var(--sp-2);
@@ -17,14 +20,13 @@
 
     @media screen and (prefers-color-scheme: dark) {
         background-color: var(--color-white-at-6);
-        color: var(--color-white-at-84);
     }
 }
 
 .iconBlock {
     margin-right: var(--sp-2);
-    width: var(--sp-12);
-    min-width: var(--sp-12);
+    width: 3rem;
+    min-width: 3rem;
 }
 
 .content {
@@ -35,7 +37,7 @@
 .title {
     font-weight: var(--title-2-font-weight);
     line-height: normal;
-    margin-bottom: var(--sp-2);
+    margin-bottom: var(--sp-1);
 }
 
 .description {
@@ -60,7 +62,7 @@
     height: var(--sp-8);
     background-color: var(--color-black-at-6);
     border-width: 0;
-    border-radius: 6px;
+    border-radius: var(--border-radius-sm);
     text-wrap: nowrap;
 
     &:hover {
@@ -82,8 +84,8 @@
     }
 
     &:focus-visible {
-        /* box-shadow: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--color-blue-50); */
-        box-shadow: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--ntp-focus-outline-color);
+        outline: none;
+        box-shadow: var(--focus-ring);
     }
 
     @media screen and (prefers-color-scheme: dark) {
@@ -107,11 +109,6 @@
             cursor: not-allowed;
             background-color: var(--color-white-at-12);
         }
-
-        &:focus-visible {
-            /* box-shadow: 0px 0px 0px 1px var(--color-blue-90), 0px 0px 0px 3px var(--color-white); */
-            box-shadow: 0px 0px 0px 1px var(--ntp-focus-outline-color), 0px 0px 0px 3px var(--color-white);
-        }
     }
 }
 
@@ -130,10 +127,6 @@
         background-color: var(--color-blue-70);
     }
 
-    /* &:focus-visible {
-        box-shadow: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--color-blue-50);
-    } */
-
     @media screen and (prefers-color-scheme: dark) {
         color: var(--color-black-at-84);
         background-color: var(--color-blue-20);
@@ -150,10 +143,6 @@
             background-color: var(--color-white-at-36);
             color: var(--color-black-at-84);
         }
-
-        /* &:focus-visible {
-            box-shadow: 0px 0px 0px 1px var(--color-blue-90), 0px 0px 0px 3px var(--color-white);
-        } */
     }
 }
 
@@ -162,3 +151,15 @@
     top: 0.5rem;
     right: 0.5rem;
 }
+
+
+@keyframes animate-fade {
+    0% { 
+        opacity: 0; 
+        scale: 0.98; 
+    }
+    100% { 
+        opacity: 1; 
+        scale: 1;
+    }
+  }
