--- a/special-pages/pages/new-tab/app/styles/ntp-theme.css
+++ b/special-pages/pages/new-tab/app/styles/ntp-theme.css
@@ -6,6 +6,7 @@
     --ntp-text-muted: var(--color-black-at-60);
     --ntp-text-on-primary: var(--color-white-at-84);
     --ntp-color-primary: var(--ddg-color-primary);
+    --ntp-gap: 2rem;
 
     /* Mac/System/Body */
     --body-font-size: 13px;
@@ -23,6 +24,12 @@
     --title-3-em-line-height: 20px;
 
     --ntp-focus-outline-color: black;
+    --border-radius-lg: 12px;
+    --border-radius-md: 8px;
+    --border-radius-sm: 6px;
+    --border-radius-xs: 4px;
+    --focus-ring: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--ntp-focus-outline-color);
+    --focus-ring-thin: 0px 0px 0px 1px var(--ntp-focus-outline-color), 0px 0px 0px 1px  var(--color-white);
 
 
     @media (prefers-color-scheme: dark) {
@@ -34,6 +41,8 @@
         --ntp-color-primary: var(--color-blue-30);
         --ntp-text-on-primary: var(--color-black-at-84);
         --ntp-focus-outline-color: white;
+        --focus-ring: 0px 0px 0px 1px var(--ntp-focus-outline-color), 0px 0px 0px 3px var(--color-white);
+        --focus-ring-thin: 0px 0px 0px 1px  var(--color-white), 0px 0px 0px 1px var(--ntp-focus-outline-color);
     }
 }
 
