--- a/special-pages/shared/components/Button/Button.module.css
+++ b/special-pages/shared/components/Button/Button.module.css
@@ -3,6 +3,7 @@
     background: var(--button-bg);
     color: var(--button-text);
     cursor: pointer;
+    text-wrap: nowrap;
 }
 
 /* macOS Base Style */
@@ -106,6 +107,7 @@ body:not([data-platform-name]) {
 
 /* macOS Variables */
 [data-platform-name="macos"] .button {
+
     &.standard {
         --button-bg: var(--macos-control-standard-background-rest);
         --button-text: var(--macos-text-primary);
@@ -218,3 +220,111 @@ body:not([data-platform-name]) {
     }
 }
 
+/* Windows Implementation */
+/* [data-platform-name="windows"] .button { */
+:root:has(body[data-platform-name="windows"]) {
+    .button {
+        border-radius: var(--border-radius-sm);
+        height: var(--sp-8);
+        position: relative;
+        text-wrap: nowrap;
+        border-width: 0;
+        padding-inline: var(--sp-3);
+
+        &:focus-visible {
+            outline: none;
+            box-shadow: var(--focus-ring);
+        }
+
+    &.standard {
+        background-color: var(--color-black-at-6);
+        border-width: 0;
+
+        &:hover {
+            background-color: var(--color-black-at-9);
+            cursor: pointer;
+        }
+
+        &:active {
+            background-color: var(--color-black-at-12);
+        }
+
+        &:disabled {
+            color: var(--color-black-at-84);
+        }
+
+        &:disabled:hover {
+            cursor: not-allowed;
+            background-color: var(--color-white-at-6);
+        }
+    }
+
+    &.accentBranded {
+        background-color: var(--ddg-color-primary);
+        color: var(--color-white);
+
+        &:hover {
+            background-color: var(--color-blue-60);
+        }
+
+        &:active {
+            background-color: var(--color-blue-70);
+        }    
+    }
+
+    @media screen and (prefers-color-scheme: dark) {
+        &.standard {
+            color: var(--color-white-at-84);
+            background-color: var(--color-white-at-12);
+    
+            &:hover {
+                background-color: var(--color-white-at-18);
+            }
+    
+            &:active {
+                background-color: var(--color-white-at-24);
+            }
+    
+            &:disabled {
+                color: var(--color-white-at-12);
+                opacity: 0.8;
+            }
+    
+            &:disabled:hover {
+                background-color: var(--color-white-at-12);
+            }
+        }
+
+        &.accentBranded {
+            color: var(--color-black-at-84);
+            background-color: var(--color-blue-20);
+    
+            &:hover {
+                background-color: var(--color-blue-30);
+            }
+    
+            &:active {
+                background-color: var(--color-blue-40);
+            }
+    
+            &:disabled {
+                background-color: var(--color-white-at-36);
+                color: var(--color-black-at-84);
+            }
+        }
+    }
+}}
+
+/* Windows Variables (partial) */
+[data-platform-name="windows"] .button {
+    .standard {
+
+    }
+
+    .accent {
+
+    }
+
+    @media (prefers-color-scheme: dark) {
+    }
+}
