--- a/special-pages/shared/components/Button/Button.module.css
+++ b/special-pages/shared/components/Button/Button.module.css
@@ -257,7 +257,7 @@ body:not([data-platform-name]) {
         }
     }
 
-    &.accentBranded {
+    &.accentBrand {
         background-color: var(--ddg-color-primary);
         color: var(--color-white);
 
@@ -293,7 +293,7 @@ body:not([data-platform-name]) {
             }
         }
 
-        &.accentBranded {
+        &.accentBrand {
             color: var(--color-black-at-84);
             background-color: var(--color-blue-20);
     
