--- a/special-pages/pages/special-error/app/components/AdvancedInfo.module.css
+++ b/special-pages/pages/special-error/app/components/AdvancedInfo.module.css
@@ -11,6 +11,12 @@
     animation-name: appear;
 }
 
+.heading {
+    & a {
+        color: var(--link-color);
+    }
+}
+
 .content {
     display: flex;
     flex-flow: column;
@@ -48,10 +54,6 @@
     & .container {
         background: var(--advanced-info-bg);
         box-shadow: inset 0 1px 0 0 var(--border-color);
-    }
-
-    & .visitSite {
-        align-self: flex-end;
     }
 }
 
