--- a/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
+++ b/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
@@ -12,6 +12,19 @@
     &:focus-visible .icon {
         box-shadow: var(--focus-ring);
     }
+
+    &[data-dropped="true"] {
+        animation-name: pulse;
+        animation-duration: 500ms;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out;
+    }
+}
+
+@keyframes pulse {
+    0% { scale: 1 }
+    50% { scale: 1.2 }
+    100% { scale: 1 }
 }
 
 .icon {
@@ -50,12 +63,6 @@
     background-repeat: no-repeat;
     background-size: contain;
     pointer-events: none;
-    opacity: 0;
-    transition: opacity .3s;
-
-    &[data-loaded] {
-        opacity: 1;
-    }
 
     &[data-loaded][data-did-try-fallback] {
         border-radius: var(--border-radius-md);
