--- a/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
+++ b/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
@@ -10,6 +10,12 @@
     width: 100%;
     margin-bottom: var(--ntp-gap);
 
+    &:hover {
+        .sectionExpander * {
+            opacity: 1;
+        }
+    }
+
     @media screen and (prefers-color-scheme: dark) {
         border-color: var(--color-white-at-9);
     }
@@ -18,28 +24,25 @@
 .heading {
     display: grid;
     grid-template-columns: 1.5rem auto 2rem;
-    gap: var(--sp-3);
+    grid-column-gap: var(--sp-2);
+    grid-row-gap: var(--sp-1);
     grid-template-rows: auto;
     grid-template-areas: 'icon title expander';
 }
 .heading:has(.subtitle) {
     grid-template-rows: auto auto;
     grid-template-areas:
-         'icon title expander'
-        'label label label';
+        'icon title expander'
+        'empty label label';
 }
 .headingIcon {
     grid-area: icon;
     width: 1.5rem;
-    height: 1.5rem;
+    height: var(--title-2-line-height);
     position: relative;
-
-    img {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, calc(-50% - 2px));
-    }
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .title {
@@ -63,7 +66,8 @@
 .subtitle {
     grid-area: label;
     color: var(--ntp-text-muted);
-    padding-left: 2px;
+    line-height: 1;
+    text-transform: uppercase;
 }
 
 .list {
@@ -120,7 +124,7 @@
 .row {
     min-height: 2rem;
     display: grid;
-    grid-gap: 0.75rem;
+    grid-gap: var(--sp-2);
     grid-template-columns: auto auto 40%;
     grid-template-areas: 'company count bar';
     align-items: center;
@@ -202,4 +206,10 @@
     grid-area: count;
     text-align: right;
     color: var(--ntp-text-normal);
+}
+
+.sectionExpander {
+    &:hover * {
+        opacity: 1;
+    }
 }
