--- a/special-pages/pages/new-tab/app/components/ShowHide.module.css
+++ b/special-pages/pages/new-tab/app/components/ShowHide.module.css
@@ -14,6 +14,7 @@
     border-radius: var(--border-radius-sm);
 
     &.round {
+        height: 2rem;
         width: 2rem;
         border-radius: 50%;
 
