--- a/special-pages/pages/new-tab/app/components/ShowHide.module.css
+++ b/special-pages/pages/new-tab/app/components/ShowHide.module.css
@@ -11,14 +11,22 @@
     color: var(--ntp-text-normal);
     height: var(--ntp-gap);
     width: 100%;
-    border-radius: var(--border-radius-md);
+    border-radius: var(--border-radius-sm);
 
     &.round {
+        height: 2rem;
         width: 2rem;
         border-radius: 50%;
 
         &:focus-visible {
             box-shadow: var(--focus-ring);
+        }
+    }
+
+    &.withText {
+        border: 1px solid var(--color-black-at-9);
+        svg {
+            margin-right: var(--sp-2);
         }
     }
 
@@ -33,5 +41,11 @@
     &:focus-visible {
         opacity: 1;
         box-shadow: var(--focus-ring-thin);
+    }
+
+    @media (prefers-color-scheme: dark) {
+        &.withText {
+            border-color: var(--color-white-at-9);
+        } 
     }
 }
