ntp: added translations (#1279)
* ntp: added translations

* further UI tweaks

* fix: wordwrap in nextsteps cards

* prevent default padding on button

* chore: Add hover and active states to list expander button

* right-align expander with bars

* don't use the offset when collapsed

---------

Co-authored-by: Shane Osbourne <sosbourne@duckduckgo.com>
Co-authored-by: Valerie Kraucunas <vkraucunas@duckduckgo.com>

--- a/special-pages/pages/new-tab/app/components/ShowHide.module.css
+++ b/special-pages/pages/new-tab/app/components/ShowHide.module.css
@@ -17,6 +17,7 @@
         height: 2rem;
         width: 2rem;
         border-radius: 50%;
+        padding-inline: 0;
 
         &:focus-visible {
             box-shadow: var(--focus-ring);
@@ -27,6 +28,14 @@
         border: 1px solid var(--color-black-at-9);
         svg {
             margin-right: var(--sp-2);
+        }
+
+        &:hover {
+            background-color: var(--color-black-at-9);
+        }
+
+        &:active {
+            background-color: var(--color-black-at-12);
         }
     }
 
@@ -46,6 +55,14 @@
     @media (prefers-color-scheme: dark) {
         &.withText {
             border-color: var(--color-white-at-9);
+
+            &:hover {
+                background-color: var(--color-white-at-9);
+            }
+    
+            &:active {
+                background-color: var(--color-white-at-12);
+            }
         } 
     }
 }
