--- a/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
+++ b/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
@@ -42,7 +42,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 2px;
+    padding-top: 0.5px;
 }
 
 .title {
@@ -60,6 +60,12 @@
         top: 50%;
         transform: translateY(-50%);
         opacity: 1;
+        /**
+         * NOTE: This is just for visual alignment. The grid in which this sits is correct,
+         * but to preserve the larger tap-area for the button, we're opting to shift this over
+         * manually to solve this specific layout case.
+         */
+        right: -4px
     }
 }
 
@@ -133,7 +139,7 @@
     align-items: center;
 
     @media screen and (min-width: 500px) {
-        grid-template-columns: auto auto 60%;
+        grid-template-columns: 35% 10% calc(55% - 1rem); /* - 1rem accounts for the grid gaps */
     }
 }
 
@@ -149,6 +155,7 @@
     align-items: center;
     gap: var(--sp-2);
     padding-left: var(--sp-1);
+    overflow: hidden;
 }
 
 .icon {
@@ -184,7 +191,12 @@
 .name {
     font-size: var(--title-3-em-font-size);
     font-weight: var(--title-3-em-font-weight);
-    line-height: 1;
+    text-overflow: ellipsis;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    top: -1px;
 }
 
 .count {
