--- a/special-pages/shared/components/Button/Button.module.css
+++ b/special-pages/shared/components/Button/Button.module.css
@@ -222,9 +222,11 @@ body:not([data-platform-name]) {
 }
 
 /* Windows Implementation */
-/* [data-platform-name="windows"] .button { */
 :root:has(body[data-platform-name="windows"]) {
     .button {
+        /* this is the focus ring used on NTP widgets */
+    --focus-ring: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--color-black);
+
         border-radius: var(--border-radius-sm);
         height: var(--sp-8);
         border-width: 0;
@@ -272,6 +274,8 @@ body:not([data-platform-name]) {
     }
 
     @media screen and (prefers-color-scheme: dark) {
+        --focus-ring: 0px 0px 0px 1px var(--color-black), 0px 0px 0px 3px var(--color-white);
+
         &.standard {
             color: var(--color-white-at-84);
             background-color: var(--color-white-at-12);
