--- a/special-pages/pages/new-tab/app/styles/base.css
+++ b/special-pages/pages/new-tab/app/styles/base.css
@@ -64,6 +64,11 @@ li {
     margin: 0;
     padding: 0;
 }
+
+button {
+    text-wrap: nowrap;
+}
+
 .sr-only {
     position: absolute;
     width: 1px;
