ntp: customizer drawer, feature flag

--- a/special-pages/pages/new-tab/app/styles/ntp-theme.css
+++ b/special-pages/pages/new-tab/app/styles/ntp-theme.css
@@ -1,12 +1,14 @@
 :root {
     --ntp-background-color: white;
     --ntp-surface-background-color: white;
+    --ntp-surfaces-panel-background-color: white;
     --ntp-surface-border-color: var(--color-black-at-6);
     --ntp-text-normal: var(--color-black-at-84);
     --ntp-text-muted: var(--color-black-at-60);
     --ntp-text-on-primary: var(--color-white-at-84);
     --ntp-color-primary: var(--ddg-color-primary);
     --ntp-gap: 2rem;
+    --ntp-drawer-width: calc(236 * var(--px-in-rem));
 
     /* Mac/System/Body */
     --body-font-size: 13px;
@@ -35,6 +37,7 @@
     @media (prefers-color-scheme: dark) {
         --ntp-background-color: var(--color-gray-85);
         --ntp-surface-background-color: #2a2a2a;
+        --ntp-surfaces-panel-background-color: #222222;
         --ntp-surface-border-color: var(--color-white-at-6);
         --ntp-text-normal: var(--color-white-at-84);
         --ntp-text-muted: var(--color-white-at-60);
