--- a/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
+++ b/special-pages/pages/new-tab/app/favorites/components/Tile.module.css
@@ -30,7 +30,7 @@
 .icon {
     display: grid;
     align-content: center;
-    justify-content: center;
+    justify-items: center;
     width: 4rem;
     height: 4rem;
     border-radius: var(--border-radius-lg);
