--- a/special-pages/shared/components/Button/Button.module.css
+++ b/special-pages/shared/components/Button/Button.module.css
@@ -3,6 +3,7 @@
     background: var(--button-bg);
     color: var(--button-text);
     cursor: pointer;
+    position: relative;
 }
 
 /* macOS Base Style */
@@ -128,7 +129,8 @@ body:not([data-platform-name]) {
         /* TODO: No difference on hover according to Figma(?) */
     }
 
-    &.accent {
+    &.accent, 
+    &.accentBrand {
         --button-bg: var(--macos-control-accent-branded-background-rest);
         --button-text: var(--color-white);
         --button-shadow: var(--macos-control-accent-shadow);
@@ -218,3 +220,99 @@ body:not([data-platform-name]) {
     }
 }
 
+/* Windows Implementation */
+[data-platform-name="windows"] {
+    .button {
+        /* this is the focus ring used on NTP widgets */
+    --focus-ring: 0px 0px 0px 1px var(--color-white), 0px 0px 0px 3px var(--color-black);
+
+        border-radius: var(--border-radius-sm);
+        height: var(--sp-8);
+        border-width: 0;
+        padding-inline: var(--sp-3);
+
+        &:focus-visible {
+            outline: none;
+            box-shadow: var(--focus-ring);
+        }
+
+    &.standard {
+        background-color: var(--color-black-at-6);
+        border-width: 0;
+
+        &:hover {
+            background-color: var(--color-black-at-9);
+            cursor: pointer;
+        }
+
+        &:active {
+            background-color: var(--color-black-at-12);
+        }
+
+        &:disabled {
+            color: var(--color-black-at-84);
+        }
+
+        &:disabled:hover {
+            cursor: not-allowed;
+            background-color: var(--color-white-at-6);
+        }
+    }
+
+    &.accentBrand {
+        background-color: var(--ddg-color-primary);
+        color: var(--color-white);
+
+        &:hover {
+            background-color: var(--color-blue-60);
+        }
+
+        &:active {
+            background-color: var(--color-blue-70);
+        }    
+    }
+
+    @media screen and (prefers-color-scheme: dark) {
+        --focus-ring: 0px 0px 0px 1px var(--color-black), 0px 0px 0px 3px var(--color-white);
+
+        &.standard {
+            color: var(--color-white-at-84);
+            background-color: var(--color-white-at-12);
+    
+            &:hover {
+                background-color: var(--color-white-at-18);
+            }
+    
+            &:active {
+                background-color: var(--color-white-at-24);
+            }
+    
+            &:disabled {
+                color: var(--color-white-at-12);
+                opacity: 0.8;
+            }
+    
+            &:disabled:hover {
+                background-color: var(--color-white-at-12);
+            }
+        }
+
+        &.accentBrand {
+            color: var(--color-black-at-84);
+            background-color: var(--color-blue-20);
+    
+            &:hover {
+                background-color: var(--color-blue-30);
+            }
+    
+            &:active {
+                background-color: var(--color-blue-40);
+            }
+    
+            &:disabled {
+                background-color: var(--color-white-at-36);
+                color: var(--color-black-at-84);
+            }
+        }
+    }
+}}
