--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -89,6 +89,23 @@
     }
 }
 
+.confirmation {
+    display: flex;
+    align-items: center;
+    transition: all .2s;
+    padding-bottom: var(--sp-1);
+    svg {
+        height: 1rem;
+        width: 1rem;
+        margin-right: var(--sp-2);
+    }
+
+    p {
+        font-weight: 700;
+        font-size: calc(11 * var(--px-in-rem));
+    }
+}
+
 .dismissBtn {
     position: absolute;
     top: 0.5rem;
