--- a/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
+++ b/special-pages/pages/new-tab/app/next-steps/components/NextSteps.module.css
@@ -48,6 +48,16 @@
     line-height: calc(14 * var(--px-in-rem));
     color: var(--ntp-color-primary);
 
+    &.supressActiveStateForSwitch {
+        opacity: 1;
+        transition: opacity .3s ease-out;
+
+        &:active {
+            background-color: var(--color-black-at-6);
+            opacity: 0;
+        }
+    }
+
     &:hover {
         background-color: var(--color-black-at-6);
         cursor: pointer;
@@ -73,6 +83,13 @@
     }
 
     @media screen and (prefers-color-scheme: dark) {
+        &.supressActiveStateForSwitch {
+            /* outline: 1px solid yellow; */
+            &:active {
+                background-color: var(--color-black-at-9);
+            }
+        }
+
         &:hover:not(:active) {
             background-color: var(--color-black-at-9);
         }
@@ -92,8 +109,11 @@
 .confirmation {
     display: flex;
     align-items: center;
-    transition: all .2s;
-    padding-bottom: var(--sp-1);
+    transition: all .2s ease-in;
+    font-size: calc(11 * var(--px-in-rem));
+    line-height: calc(14 * var(--px-in-rem));
+    padding-bottom: calc(5 * var(--px-in-rem));
+
     svg {
         height: 1rem;
         width: 1rem;
@@ -101,7 +121,7 @@
     }
 
     p {
-        font-weight: 700;
+        font-weight: 600;
         font-size: calc(11 * var(--px-in-rem));
     }
 }
