chore: Data changes and improve buttons

--- a/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
+++ b/special-pages/pages/new-tab/app/privacy-pro/components/PrivacyPro.module.css
@@ -93,7 +93,7 @@
 
 .body {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: var(--sp-4);
     padding-top: var(--sp-6);
 }
@@ -106,6 +106,7 @@
     padding: 4px;
     color: var(--ntp-text-normal);
     min-height: 140px;
+    overflow: hidden;
     
     &:hover {
         border: 1px solid #3969EF;
@@ -117,12 +118,18 @@
         align-items: center;
         border-bottom: 1px solid var(--ntp-surface-border-color);
         font-weight: 600;
+        
+        p {
+            word-wrap: break-word;
+            text-wrap: wrap;
+            text-align: left;
+        }
+        img {
+            height: 2rem;
+            width: 2rem;
+        }
     }
 
-    img {
-        height: 2rem;
-        width: 2rem;
-    }
 }
 
 .entering {
